# compute42

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: integration-tests.yml  release.yml  test.yml
app/: .gitignore  .prettierignore  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
app/capabilities/: default.json
app/src/: App.vue  main.ts  shims-vue.d.ts
app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/linux/: template.desktop
app/src-tauri/src/: error.rs  lib.rs  logger.rs  main.rs  orchestrator_tauri.rs  state.rs  tauri_emitter.rs  updater_service.rs  windows_titlebar.rs
app/src-tauri/src/commands/: file_server.rs  files.rs  generic.rs  lsp.rs  mod.rs  notebook.rs  packages.rs  plot.rs  process.rs  projects.rs  startup.rs  syntax.rs  tab.rs  updater.rs  utils.rs
app/src-tauri/windows/: installer.nsi
demo/: Manifest.toml  Project.toml  README.md  ml_training.ipynb  penguin_analysis.ipynb
internals/: Cargo.toml  build.rs
internals/scripts/: debugger.jl  main.jl
internals/scripts/core/: core.jl  display.jl  extract_base_docs.jl  packages.jl
internals/scripts/core/submodules/: communication.jl  execution.jl  handlers.jl  json_utils.jl  notebook.jl  workspace.jl
internals/scripts/debugger/: communication.jl  display.jl  execution.jl  handlers.jl  inspection.jl  state.jl
internals/src/: actor_error_handling.rs  actor_system.rs  app_time.rs  config.rs  lib.rs  service_traits.rs  types.rs  version.rs
internals/src/actors/: mod.rs
internals/src/actors/communication_actor/: connection.rs  execution.rs  io_operations.rs  message_handler.rs  mod.rs  state.rs
internals/src/actors/configuration_actor/: mod.rs  persistence.rs
internals/src/actors/execution_actor/: mod.rs
internals/src/actors/file_server_actor/: csv.rs  handlers.rs  mod.rs  server.rs
internals/src/actors/file_watcher_actor/: mod.rs
internals/src/actors/filesystem_actor/: mod.rs
internals/src/actors/installation_actor/: cleanup.rs  discovery.rs  download.rs  extraction.rs  handlers.rs  installation.rs  mod.rs  types.rs  version_info.rs
internals/src/actors/lsp_actor/: handlers_documents.rs  handlers_features.rs  handlers_lifecycle.rs  lifecycle.rs  mod.rs  service_impl.rs  state.rs  type_conversions.rs  utils.rs
internals/src/actors/orchestrator_actor/: handlers.rs  mod.rs  startup_phases.rs  startup_state.rs  startup_state_machine.rs  work_handlers.rs
internals/src/actors/plot_actor/: filters.rs  handlers.rs  mod.rs  server.rs  storage.rs
internals/src/actors/process_actor/: file_creation.rs  lifecycle.rs  mod.rs  output_monitoring.rs  session.rs  setup.rs  state.rs
internals/src/actors/project_actor/: mod.rs
internals/src/actors/state_actor/: mod.rs
internals/src/messages/: communication.rs  configuration.rs  coordination.rs  execution.rs  file_server.rs  filesystem.rs  installation.rs  lsp.rs  mod.rs  orchestrator.rs  plot.rs  process.rs  state.rs
internals/src/mocks/: auth_service.rs  core.rs  features.rs  mod.rs  process.rs  services.rs
internals/src/services/: mod.rs
internals/src/services/base/: error_handling.rs  file_utils.rs  logging.rs  mod.rs  service_adapter.rs  service_trait.rs  variable_utils.rs
internals/src/services/events/: event_service.rs  mod.rs
internals/src/services/factory/: actor_system_builder.rs  mod.rs
internals/src/services/persistence/: mod.rs  persistence_service.rs
languageserver/: Cargo.toml  README.md  cst_dump.txt  macro_dump.txt  operator_cst_dump.txt
languageserver/src/: lib.rs
languageserver/src/embedded/: mod.rs  service.rs
languageserver/src/features/: completion.rs  definition.rs  mod.rs  references.rs
languageserver/src/features/code_actions/: delimiters.rs  imports.rs  missing_end.rs  mod.rs  undefined_vars.rs  unused_vars.rs
languageserver/src/features/diagnostics/: cst_debug.rs  error_analysis.rs  extractor.rs  incremental.rs  message_enhancer.rs  mod.rs  syntax_analyzer.rs
languageserver/src/features/diagnostics/semantic/: debug.rs  definitions.rs  imports.rs  mod.rs  parameters.rs  references.rs  types.rs  usage.rs  utils.rs
languageserver/src/features/hover/: content_builder.rs  helpers.rs  location_hints.rs  mod.rs  symbol_hover.rs  variable_analysis.rs
languageserver/src/pipeline/: config.rs  indexing.rs  julia_pipeline.rs  mod.rs  orchestrator.rs  package_pipeline.rs  pipeline_trait.rs  types.rs  workspace_pipeline.rs
languageserver/src/pipeline/analyzers/: export.rs  mod.rs  reference.rs  scope.rs  signature.rs  symbol.rs  traits.rs  type_analyzer.rs
languageserver/src/pipeline/parser/: mod.rs  parser.rs
languageserver/src/pipeline/query/: completion.rs  mod.rs  reference.rs  symbol.rs  symbol_resolver.rs  traits.rs  type_query.rs
languageserver/src/pipeline/sources/: base.rs  base_docs.rs  base_docs_extraction.rs  document.rs  file.rs  mod.rs  package.rs  project_context.rs  workspace.rs
languageserver/src/pipeline/sources/indexing/: ast_walker.rs  docstring_extraction.rs  file_indexer.rs  mod.rs  package_resolver.rs  signature_extraction.rs  type_extraction.rs
languageserver/src/pipeline/storage/: index.rs  mod.rs  persistence.rs
languageserver/src/pipeline/storage/cache/: diagnostics_cache.rs  docs_cache.rs  document_cache.rs  file_type_map.rs  hover_cache.rs  mod.rs  stats.rs  symbol_cache.rs
languageserver/src/types/: base_docs.rs  mod.rs  module_exports.rs  scope.rs  type_expr.rs
languageserver/tests/: dump_cst.rs  lib.rs  test_base_indexing.rs  test_check_base_docs.rs  test_demo_diagnostics.rs  test_type_annotation_parsing.rs
languageserver/tests/fixtures/: macros.jl  malformed.jl  module.jl  simple_function.jl  types.jl
languageserver/tests/unit/: mod.rs  test_parser.rs  test_symbol_resolver.rs
shared/: Cargo.toml
shared/src/: lib.rs
shared/src/frontend/: lsp.rs  mod.rs  notebook.rs  orchestrator.rs  plots.rs
shared/tests/: export_bindings.rs  notebook.rs
(+132 files in other folders)
