[workspace]
members = [
    "app/src-tauri",
    "internals",
    "languageserver",
    "shared"
]
exclude = ["tests"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Compute42 Contributors"]
license = "MIT"
repository = "https://github.com/elan8/compute42"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7" }
futures = "0.3"
futures-util = "0.3"
async-trait = "0.1"
log = { version = "0.4.27", features = ["kv"] }
toml = "0.8.22"
dirs = "6.0.0"
uuid = { version = "1.16.0", features = ["v4"] }
reqwest = { version = "0.12.4", features = ["json", "stream"] }
once_cell = "1.19"
bytes = "1"
url = "2.5.0"
zip = "0.6"
axum = "0.7"
mime_guess = "2.0"
base64 = "0.21"
interprocess = "2.0"
tempfile = "3.20.0"
csv = "1.3"
encoding_rs = "0.8"
tower-http = { version = "0.5", features = ["cors"] }
thiserror = "1.0"
keyring = "2.2"
jsonwebtoken = "9.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
lazy_static = "1.4"
regex = "1.10"

