[package]
name = "compute42"
description = "Compute42 IDE"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "compute42"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }
chrono.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2" 
tauri-plugin-fs = "2" 
tauri-plugin-shell = "2" 
tauri-plugin-process = "2"
tauri-plugin-http = "2"
tokio.workspace = true
futures.workspace = true
async-trait.workspace = true
dirs.workspace = true
log.workspace = true
toml.workspace = true
uuid = { version = "1.16.0", features = ["v4"] }
reqwest = { version = "0.11", features = ["json"] }
urlencoding = "2.1"
internals = { path = "../../internals" }
shared = { path = "../../shared" }
actix = "0.13"
fern= { version = "0.7.1", features = ["date-based"] }
font-kit = "0.11"
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Dwm"
] }

